Functions + Code Block/Shadowing + References

--- a/Rust Programming Tutorials.ipynb
+++ b/Rust Programming Tutorials.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "()"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,6 +548,180 @@
     "    let tup4 = (1, 4, 7);\n",
     "    let (a, b, c) = tup4;\n",
     "    println!(\"a={}, b={}, c={}\", a, b, c);\n",
+    "}\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is odd\n",
+      "2 is even\n",
+      "3 is odd\n",
+      "4 is even\n",
+      "5 is odd\n",
+      "6 is even\n",
+      "7 is odd\n",
+      "8 is even\n",
+      "9 is odd\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pub fn main() {\n",
+    "    print_numbers_to(10);\n",
+    "}\n",
+    "\n",
+    "pub fn print_numbers_to(num: u32) {\n",
+    "    for i in 1..num {\n",
+    "        if is_odd(i) {\n",
+    "            println!(\"{} is odd\", i);\n",
+    "        }\n",
+    "        else {\n",
+    "            println!(\"{} is even\", i);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub fn is_odd(num: u32) -> bool {\n",
+    "    return (num % 2) == 1;\n",
+    "}\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code Blocks + Shadowing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=5\n",
+      "x=6\n",
+      "x=5\n",
+      "x=salut\n",
+      "x=true\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pub fn main() {\n",
+    "    let x = 5;\n",
+    "    println!(\"x={}\", x);    \n",
+    "    {\n",
+    "        let x = 6;\n",
+    "        println!(\"x={}\", x);\n",
+    "    }    \n",
+    "    println!(\"x={}\", x);\n",
+    "    \n",
+    "    let x = \"salut\";\n",
+    "    println!(\"x={}\", x);\n",
+    "    \n",
+    "    let x = true;\n",
+    "    println!(\"x={}\", x);\n",
+    "}\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "https://doc.rust-lang.org/1.8.0/book/references-and-borrowing.html\n",
+    "> The Rules\n",
+    "> - one or more references (&T) to a resource,\n",
+    "> - exactly one mutable reference (&mut T)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 10\n",
+      "x = 10 - xref = 10\n",
+      "x = 11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pub fn main() {\n",
+    "    let mut x = 10;\n",
+    "    println!(\"x = {}\", x);\n",
+    "\n",
+    "    // immutable reference\n",
+    "    {\n",
+    "        let xref = &x;    \n",
+    "        println!(\"x = {} - xref = {}\", x, xref);    \n",
+    "    }\n",
+    "    \n",
+    "    // mutable reference need to be in a block\n",
+    "    {\n",
+    "        let xref_mut = &mut x;\n",
+    "        *xref_mut += 1;    \n",
+    "    }\n",
+    "    println!(\"x = {}\", x);\n",
     "}\n",
     "\n",
     "main()"
