--- a/Rust Programming Tutorials.ipynb
+++ b/Rust Programming Tutorials.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Rust Programming Tutorial\n",
+    "\n",
+    "https://www.youtube.com/watch?v=vOMJlQ5B-M0&list=PLVvjrrRCBy2JSHf9tGxGKJ-bYAN_uDCUL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hello World"
    ]
   },
@@ -722,6 +731,33 @@
     "        *xref_mut += 1;    \n",
     "    }\n",
     "    println!(\"x = {}\", x);\n",
+    "}\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Struct, Tuple Struct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pub struct Color {\n",
+    "    red: u8,\n",
+    "    green: u8,\n",
+    "    blue: u8,\n",
+    "}\n",
+    "\n",
+    "pub fn main() {\n",
+    "    bg_imut: Color { red=355, green=70, blue=15};\n",
+    "    println!(\"{}, {}, {}\", bg_imut.red, bg_imut.green, bg_imut.blue);\n",
     "}\n",
     "\n",
     "main()"
